--- a/src/assets/styl/shadow.styl
+++ b/src/assets/styl/shadow.styl
@@ -3,9 +3,9 @@
 
 for $z in 1..24
   .shadow-{$z}
-    box-shadow $shadow-+$z
+    box-shadow $shadow-+$z !important
   .shadow-up-{$z}
-    box-shadow $shadow-up-+$z
+    box-shadow $shadow-up-+$z !important
 
 .no-shadow, .shadow-0
   box-shadow none !important
