refatoração e componentização do módulo de mensagens

--- a/dev/components/theme/spolitico-theme/mensagens/assets/scss/style.css
+++ b/dev/components/theme/spolitico-theme/mensagens/assets/scss/style.css
@@ -10,3 +10,11 @@ body {
 .mail-toolbar {
   height: 60px;
 }
+
+.active-filter, .active-filter:hover {
+  background-color: #23b7e5;
+  color: #fff !important;
+}
+.no-border {
+  border: none !important;
+}
